--- a/RockScissorsPaperWithAI.ipynb
+++ b/RockScissorsPaperWithAI.ipynb
@@ -394,6 +394,24 @@
     "print(\"test_loss: {} \".format(test_loss))\n",
     "print(\"test_accuracy: {}\".format(test_accuracy))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "간단히 가위바위보 게임을 구현할 수 있어서 신기하고 재밌었습니다.\n",
+    "다만, 아직 동작 원리를 이해하지 못하고 스크립트를 따라만 하는 상황이 조금 답답하고 빨리 더 많이 배워야겠다는 생각이 들었습니다.\n",
+    "처음에는 인식률이 크게 높지 않았는데, 추측건데, 그 이유는 \n",
+    "1) 데이터 양이 많지 않다는 점\n",
+    "2) 학습 데이터와 테스트 데이터가 많이 다르다는 점\n",
+    "이라고 생각했습니다. 노드의 교차 검증에서 설명하듯이, 학습이 충분하지 않을 경우, 모의고사 문제와 실전 수능 문제가 유형이 다를 경우라는\n",
+    "점수가 높지 않을 수 있다고 생각했습니다.\n",
+    "\n",
+    "그래서 해결책으로는 충분한 학습을 위해 epoch수를 늘리고, 모의고사 문제와 실전 문제가 비슷하도록 초기에 구별해 놓았던 학습셋 데이터와\n",
+    "테스트 셋 데이터를 반반씩 나눠 가지도록 변경하였습니다. 그 결과 높은 성공율을 얻을 수 있었습니다."
+   ]
   }
  ],
  "metadata": {
